--- a/views/default/header.html
+++ b/views/default/header.html
@@ -2,8 +2,8 @@
     <a href="{{=URL('index')}}" id="logo" alt='Scrumforme Logo' title='Scrumforme Logo'><h1><span class="color-logo">Scrumfor</span>.me</h1></a>
     {{ if auth.is_logged_in(): }}
         <ul id="projects">
-            <li class="dropdown">
-                <a href="#" class="new_project list-projects" alt='{{=T("New Project")}}' title='{{=T("New Project")}}'><i class="icon-plus"></i></a>
+            <li id="new_project" class="dropdown">
+                <a href="#" class="dropdown_new_project list-projects" alt='{{=T("New Project")}}' title='{{=T("New Project")}}'><i class="icon-plus"></i></a>
 
                 {{ g_project = G_projects() }}
                 {{ new_project = g_project.new_project() }}
@@ -31,22 +31,38 @@
                     <button class="btn btn-info btn-mini btn_file" type="button">{{=T('Choose an image')}}</button>
                     <br>
                     <button type="submit" class="btn btn-primary">{{=T('Create')}}</button>
-                    <button type="submit" class="btn btn-danger new_project">{{=T('Cancel')}}</button>
+                    <button type="submit" class="btn btn-danger dropdown_new_project">{{=T('Cancel')}}</button>
                 {{=new_project.custom.end}}
                 <br>
                 </div>
             </li>
 
             {{p_count = 1}}
-            {{for i in all_projects["person_projects"]:}}
+            {{for project in all_projects["person_projects"]:}}
                 {{if p_count <= 6:}}
-                    <li class='{{=g_current_page("default/%s/%s" %(request.function,i.id),"active")}}'><a href='{{=URL(c="default",f="board",args=[i.id])}}' class="list-projects tip-bottom" alt='{{=i.name}}' title='{{=i.name}}'>{{=p_count}}</a></li>
+                    <li class='{{=g_current_page("default/%s/%s" %(request.function,project.id),"active")}}'>
+                        <a href='{{=URL(c="default",f="board",args=[project.id])}}' class="list-projects">
+                            {{ if project.thumbnail:}}
+                            <img class="tip-bottom" src='{{=URL("static","uploads/%s" %project.thumbnail)}}' width="55px" height="55px" alt="{{=project.name}}" title="{{=project.name}}">
+                            {{else:}}
+                            <img class="tip-bottom" src='{{=URL("static","/img/no-image_project.jpg")}}' width="55px" height="55px" alt="{{=project.name}}" title="{{=project.name}}">
+                            {{pass}}
+                        </a>
+                    </li>
                 {{p_count += 1}}
                 {{pass}}
             {{pass}}
-            {{for i in all_projects["all_shared_with_person"]:}}
+            {{for shared_project in all_projects["all_shared_with_person"]:}}
                 {{if p_count <= 10:}}
-                    <li class='{{=g_current_page("default/%s/%s" %(request.function,i.project_id),"active")}}'><a href='{{=URL(c="default",f="board",args=[i.project_id])}}' class="list-projects tip-bottom" alt='{{=i.project_id.name}}' title='{{=i.project_id.name}}'>{{=p_count}}</a></li>
+                    <li class='{{=g_current_page("default/%s/%s" %(request.function,shared_project.project_id),"active")}}'>
+                        <a href='{{=URL(c="default",f="board",args=[shared_project.project_id])}}' class="list-projects">
+                            {{ if shared_project.project_id.thumbnail:}}
+                            <img class="tip-bottom" src='{{=URL("static","uploads/%s" %shared_project.project_id.thumbnail)}}' width="55px" height="55px" alt='{{=shared_project.project_id.name}}' title='{{=shared_project.project_id.name}}'>
+                            {{else:}}
+                            <img class="tip-bottom" src='{{=URL("static","/img/no-image_project.jpg")}}' width="55px" height="55px" alt='{{=shared_project.project_id.name}}' title='{{=shared_project.project_id.name}}'>
+                            {{pass}}
+                        </a>
+                    </li>
                 {{p_count += 1}}
                 {{pass}}
             {{pass}}
