--- a/views/default/breadcrumb.html
+++ b/views/default/breadcrumb.html
@@ -1,5 +1,6 @@
 <div id="container-header">
     <div id="content-header">
+        <div class="clearfix"></div>
         <div id="breadcrumb" class="pull-left">
             <a href='{{=URL("index")}}' title="{{=T('Go to')}} {{=T('Home')}}" class="tip-bottom"><i class="icon-home"></i> Home</a>
             <a href="#" class="current">{{=response.title or request.function}}</a>
