--- a/views/default/statistics.html
+++ b/views/default/statistics.html
@@ -31,6 +31,12 @@
     }
 </script>
 
+<div id="sub-header-content" class="row-fluid">
+    {{include "default/project_info.html"}}
+    <div id="sprint_info" class="span6">
+    </div>
+</div>
+
 <div id="all_content" class="row-fluid">
     <div class="row-fluid">
         <div class="span12">
