--- a/static/css/base.css
+++ b/static/css/base.css
@@ -328,6 +328,7 @@ div.flash #closeflash {
 }
 
 #project_info {
+    padding: 10px;
 }
 
 #project_info strong {
@@ -346,7 +347,12 @@ div.flash #closeflash {
 }
 
 #project_content {
-    padding: 10px;
+    margin: 10px 0 0 10px;
+    float: left;
+    width: 80%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #sprint_info {
@@ -1610,21 +1616,12 @@ html, body, .container, .content {
     list-style: none;
     float: left;
     margin-left: 8px;
-    /*background-color: #fff;*/
     border-radius: 5px 5px 0 0;
     margin-top: 5px;
-    text-align: center;
 }
 
 #projects li.active {
     margin-top: 0px;
-}
-
-
-#projects li#new_project {
-    width: 55px;
-    height: 45px;
-    background-color: #fff;
 }
 
 
@@ -1634,17 +1631,63 @@ html, body, .container, .content {
 }
 
 #projects li a.list-projects {
-    font-size: 20px;
-    color: rgb(134, 134, 134);
     position: relative;
     top: 12px;
     left: 0px;
-    /*padding: 0px 18px;*/
-    text-decoration: none;
 }
 
-#projects li a.list-projects:hover {
-    color: #00A0B1;
+#projects .dropdown-menu {
+    width: 220px;
+    padding: 15px;
+    text-align: center;
+}
+
+#projects .dropdown-menu .input_file {
+    display: none;
+}
+
+#projects .dropdown-menu .btn_new_project {
+    width: 49%;
+}
+
+#new_project {
+    font-size: 13px;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+#new_project li {
+    top: 0px!important;
+    margin-top: 0px!important;
+    text-align: center;
+    width: 55px;
+    height: 45px;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    background-color: #49afcd;
+    background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
+    background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
+    background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
+    background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
+    border-color: #2f96b4 #2f96b4 #1f6377;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    -ms-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+}
+
+#new_project li:hover {
+   -moz-transform: scale(1.1);
+   -webkit-transform: scale(1.1);
+   -o-transform: scale(1.1);
+   transform: scale(1.1);
+   -ms-transform: scale(1.1);
 }
 
 #projects li a img {
@@ -1674,19 +1717,13 @@ html, body, .container, .content {
     width: 50px;
     height: 50px;
     position: relative;
-    top: -24px;
+    top: -26px;
+    padding: 2px;
+    background-color: #fff;
 }
 
 #projects li.active a img:hover {
-    top: -25px;
-}
-
-#projects .input_file {
-    display: none;
-}
-
-#projects button[type=submit] {
-    width: 49%;
+    top: -28px;
 }
 
 #all_projects_link {
