--- a/views/default/team.html
+++ b/views/default/team.html
@@ -16,12 +16,7 @@
 </script>
 
 <div id="sub-header-content" class="row-fluid">
-    <div id="project_info" class="span6">
-        <div id="project_content">
-            <p><strong>{{=project.name}}</strong> - {{=project.description}}</p>
-            <p><a href="{{=project.url}}" target="_blank">{{=project.url}}</a></p>
-        </div>
-    </div>
+    {{include "default/project_info.html"}}
     <div id="sprint_info" class="span6">
         <div id="right_content">
             {{ if owner_project or project_admin: }}
