--- a/views/default/board.html
+++ b/views/default/board.html
@@ -60,7 +60,7 @@
 <div id="sub-header-content" class="row-fluid">
     {{include "default/project_info.html"}}
 
-    <div id="sprint_info" class="span6">
+    <div id="sprint_info" class="project_bar_info span6">
         <div id="clock" class="pull-left">
             <p id="sprint_name">{{=sprint.name}}</p>
             <div class="clearfix"></div>
