--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -45,7 +45,7 @@
 <div id="sub-header-content" class="row-fluid">
     {{include "default/project_info.html"}}
 
-    <div id="sprint_info" class="span6">
+    <div id="sprint_info" class="project_bar_info span6">
         {{if sprint:}}
             <div id="current_sprint">
                 <div class="span5">
