--- a/views/default/project_info.html
+++ b/views/default/project_info.html
@@ -1,4 +1,4 @@
-<div id="project_info" class="span6">
+<div id="project_info" class="project_bar_info span6">
         {{ if project.thumbnail:}}
         <img class="thumbnail pull-left" src='{{=URL("static","uploads/%s" %project.thumbnail)}}' width="80px" height="80px" alt="{{=project.name}}" title="{{=project.name}}">
         {{else:}}
