--- a/views/default/team.html
+++ b/views/default/team.html
@@ -17,7 +17,7 @@
 
 <div id="sub-header-content" class="row-fluid">
     {{include "default/project_info.html"}}
-    <div id="sprint_info" class="span6">
+    <div id="sprint_info" class="project_bar_info span6">
         <div id="right_content">
             {{ if owner_project or project_admin: }}
             <h4>{{=T("Add professionals in your project team")}}</h4>
