--- a/static/css/team.css
+++ b/static/css/team.css
@@ -2,10 +2,6 @@ li {
     list-style: none;
 }
 
-#project_info, #sprint_info {
-    min-height: 95px;
-}
-
 .italic {
     font-style: italic;
 }
@@ -111,6 +107,8 @@ img.thumbnail_owner_project {
     position: relative;
     bottom: 30px;
     color: #fff;
+    text-shadow: 0px 0px 4px #000;
+    font-weight: bold;
 }
 
 #owner_container {
