--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1713,6 +1713,14 @@ html, body, .container, .content {
     box-shadow: 0 1px 3px rgb(141, 141, 141);
 }
 
+#change_thumbnail {
+    cursor: pointer;
+}
+
+#change_thumbnail:hover {
+    background-color: #006dcc;
+}
+
 #logo {
     position: absolute;
     left: 0;
@@ -1803,7 +1811,7 @@ html, body, .container, .content {
     margin: 0 auto;
     margin-bottom: 10px;
     display: block;
-    margin-top: -85px;
+    margin-top: -86px;
 }
 
 .input_file {
